add widget, create layout for widget

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,9 @@
     <color name="progress3">#5BA092</color>
     <color name="progress2">#F2A03F</color>
     <color name="progress1">#EF4949</color>
+    <color name="light_blue_50">#FFE1F5FE</color>
+    <color name="light_blue_200">#FF81D4FA</color>
+    <color name="light_blue_600">#FF039BE5</color>
+    <color name="light_blue_900">#FF01579B</color>
+    <color name="widget_value">#80000000</color>
 </resources>
