--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -34,4 +34,13 @@
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">@dimen/words_button_text_size</item>
     </style>
+
+    <style name="Theme.WordsFactory.AppWidgetContainerParent" parent="@android:style/Theme.DeviceDefault">
+        <item name="appWidgetRadius">16dp</item>
+        <item name="appWidgetInnerRadius">16dp</item>
+    </style>
+
+    <style name="Theme.WordsFactory.AppWidgetContainer" parent="Theme.WordsFactory.AppWidgetContainerParent">
+        <item name="appWidgetPadding">0dp</item>
+    </style>
 </resources>
