--- a/app/src/main/res/layout/words_factory_widget.xml
+++ b/app/src/main/res/layout/words_factory_widget.xml
@@ -65,6 +65,6 @@
         android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="20dp"
-        android:textColor="@color/widget_value"
+        android:textColor="@color/black"
         android:textSize="14sp" />
 </RelativeLayout>
