--- a/app/src/main/res/xml/words_factory_widget_info.xml
+++ b/app/src/main/res/xml/words_factory_widget_info.xml
@@ -9,5 +9,5 @@
     android:minResizeWidth="300dp"
     android:previewImage="@drawable/example_appwidget_preview"
     android:resizeMode="horizontal|vertical"
-    android:updatePeriodMillis="86400000"
+    android:updatePeriodMillis="1000"
     android:widgetCategory="home_screen" />
