--- a/app/src/main/res/drawable-v21/app_widget_inner_view_background.xml
+++ b/app/src/main/res/drawable-v21/app_widget_inner_view_background.xml
@@ -1,10 +1,6 @@
-<?xml version="1.0" encoding="utf-8"?><!--
-Background for views inside widgets to make the rounded corners based on the
-appWidgetInnerRadius attribute value
--->
+<?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-
     <corners android:radius="?attr/appWidgetInnerRadius" />
     <solid android:color="?android:attr/colorAccent" />
 </shape>
